added archive functionality to the backend